tests/ui/repr/duplicate_repr_3.stderr
error: encountered duplicate `#[repr(uN)]` parameter: duplicate set to #[repr(u32)]
 --> tests/ui/repr/duplicate_repr_3.rs:5:28
  |
5 | #[cfg_attr(not(test), repr(u32))]
  |                            ^^^

error: previous `#[repr(uN)]` parameter here
 --> tests/ui/repr/duplicate_repr_3.rs:4:8
  |
4 | #[repr(u32)]
  |        ^^^
